Created Entry Page in Home Page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
     <div class="navbar">
       <img class="navbar-logo-image "src="public/images/logo.png">
       <div class="navbar-element">Home</div>
-      <div class="navbar-element">About</div>
-      <div class="navbar-element">Outreach</div>
-      <div class="navbar-element">Media</div>
-      <div class="navbar-element">Sponsors</div>
-      <div class="navbar-element">Resources</div>
+      <div class="navbar-element navbar-dropdown-section">About</div>
+      <div class="navbar-element navbar-dropdown-section">Outreach</div>
+      <div class="navbar-element navbar-dropdown-section">Media</div>
+      <div class="navbar-element navbar-dropdown-section">Sponsors</div>
+      <div class="navbar-element navbar-dropdown-section">Resources</div>
     </div>
+
+    <!-- Content that is in the home page, when user first loads screen -->
+    <div class="home-main-title">Falcotronix</div>
+    <p class="home-main-subtitle">Team 7052 is a competitive robotics team from St. Ignatius High School and provides opportunities for all students to experience real world engineering through robotics.</p>
+    <p class="home-main-location">Located in Thunder Bay, Ontario</p>
   </body>
 </html>
