--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <!-- About page screen -->
-      <div id="home-about-section">
+      <div class="home-subsection" id="home-about-section">
         <h1>About Us</h1>
         <p>Falcotronix is a high school robotics team from St. Ignatius. We are part of FIRST Robotics, a world-wide high school robotics competition. Our mission is to promote STEM (Science, Technology, Engineering and Math) education in a team environment across Northwestern Ontario.</p>
         <a class="underlined-link" href="#">Read More</a>
@@ -39,17 +39,24 @@
       </div>
 
       <!-- Outreach page screen -->
-      <div id="home-outreach-section">
+      <div class="home-subsection" id="home-outreach-section">
         <h1>Outreach</h1>
         <p>We are always looking to impact as many people in STEM education as possible. Yearly, we go onto countless community outreach events. This summer, we are running the first ever Falcotronix Summer Camp where students from grades 5 - 8 will learn how to build small robots from scratch.</p>
         <a class="underlined-link" href="#">Read More</a>
         <div id="home-outreach-image"></div>
       </div>
 
-      <div id="home-media-section">
-        <h1>Media</h1>
+      <div class="home-subsection" id="home-media-section">
+        <div id="home-media-background-image"></div>
+        <div id="home-media-row">
+          <h1>Media</h1>
+          <img id="facebookLogo" src="public/images/socialMediaLogos/facebook.png">
+          <img id="instagramLogo" src="public/images/socialMediaLogos/instagram.png">
+          <img id="youtubeLogo" src="public/images/socialMediaLogos/youtube.png">
+          <a id="galleryLink" href="" class="custom-underlined-link">Gallery</a>
+          <a id="newsLink" href="" class="custom-underlined-link">News</a>
+        </div>
       </div>
-
     </div>
   </body>
 </html>
