Changed the format of the about page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <link href="aboutStyle.css" rel="stylesheet" type="text/css">
   <link href="navbarStyle.css" rel="stylesheet" type="text/css">
   <link href="globalStyle.css" rel="stylesheet" type="text/css">
+  <link href="aboutbarStyle.css" rel="stylesheet" type="text/css">
   <title>About</title>
 </head>
 <body>
@@ -23,6 +24,12 @@
     <div class="navbar-element navbar-dropdown-section"><a href="#">Resources</a></div>
   </div>
   <!-- Content that is in the about page, when user first loads screen -->
-  <div id="about-main-title">Thunder Bay</div>
-  <p id="about-main-subtitle">We are the St. Ignatius High School Robotics Team (SIH Robotics) consisting of over 30 enthusiastic students led by two dedicated teachers at the school. The goal of SIH Robotics is to promote STEM and FIRST Robotics not only in our school community, but in the city of Thunder Bay. Our team plans to help students develop essential skills for the future in both academics and leadership. Our devoted and experienced mentors will teach students new skills in leadership, marketing, engineering, communication, and critical thinking. In the future, we hope to continue to extend our diverse team with students of all ethnic backgrounds including those of indigenous heritage and to continue to recruit students of both genders.</p>
+  <div id="about-main-title">About</div>
+  <p id="about-main-subtitle">the team</p>
+  <div class="aboutbar-background">
+  <div class="aboutbar">
+    <div class="aboutbar-element"><a href="about.html">The Team</a></div>
+    <div class="aboutbar-element"><a href="#">Members</a></div>
+    <div class="aboutbar-element"><a href="#">Mentors</a></div>
+  </div>
 </body>
