Completed home page by adding sponsors section and footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
     <link href="homeStyle.css" rel="stylesheet" type="text/css">
     <link href="navbarStyle.css" rel="stylesheet" type="text/css">
+    <link href="footerStyle.css" rel="stylesheet" type="text/css">
     <link href="globalStyle.css" rel="stylesheet" type="text/css">
     <title>Team 7052</title>
   </head>
@@ -57,6 +58,20 @@
           <a id="newsLink" href="" class="custom-underlined-link">News</a>
         </div>
       </div>
+
+      <div class="home-subsection" id="home-sponsors-section">
+        <h1>Sponsors</h1>
+        <div id="home-sponsor-images-container">
+          <img class="home-sponsor-image" id="home-sponsor-image1" src="public/images/lakehead.png">
+          <img class="home-sponsor-image" id="home-sponsor-image2" src="public/images/concollege.png">
+        </div>
+        <a href="#" class="underlined-link">See all</a>
+      </div>
+    </div>
+
+    <div class="footer gray-footer">
+      <div class="footer-trademark">Falcotronix 2018 ®</div>
+      <div class="footer-contact">team7052@falcotronix.com</div>
     </div>
   </body>
 </html>
