Added text to about format

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <link href="navbarStyle.css" rel="stylesheet" type="text/css">
   <link href="globalStyle.css" rel="stylesheet" type="text/css">
   <link href="aboutbarStyle.css" rel="stylesheet" type="text/css">
+  <link href="footerStyle.css" rel="stylesheet" type="text/css">
   <title>About</title>
 </head>
 <body>
@@ -26,10 +27,29 @@
   <!-- Content that is in the about page, when user first loads screen -->
   <div id="about-main-title">About</div>
   <p id="about-main-subtitle">the team</p>
-  <div class="aboutbar-background">
   <div class="aboutbar">
     <div class="aboutbar-element"><a href="about.html">The Team</a></div>
     <div class="aboutbar-element"><a href="#">Members</a></div>
     <div class="aboutbar-element"><a href="#">Mentors</a></div>
   </div>
+</div>
+
+
+  <div class="about-subsection">
+    <div id="about-paragraph-section">
+    <p>quisquam est, qui dolorem ipsum quia
+dolor sit amet, consectetur, adipisci
+velit, sed quia non numquam eius modi
+tempora incidunt ut labore et dolore
+magnam aliquam quaerat voluptatem.
+Ut enim ad minima veniam, quis
+nostrum exercitationem ullam corporis
+suscipit laboriosam, nisi ut aliquid ex ea
+commodi consequatur? Quis autem vel
+eum iure reprehenderit qui in ea
+voluptate velit esse quam nihil</p>
+
+  </div>
+</div>
+
 </body>
