Restructured file system

--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
-  <link href="aboutStyle.css" rel="stylesheet" type="text/css">
-  <link href="navbarStyle.css" rel="stylesheet" type="text/css">
-  <link href="globalStyle.css" rel="stylesheet" type="text/css">
-  <link href="aboutbarStyle.css" rel="stylesheet" type="text/css">
-  <link href="footerStyle.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/aboutStyle.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/global/navbarStyle.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/global/footerStyle.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
+  <link href="stylesheets/aboutbarStyle.css" rel="stylesheet" type="text/css">
   <title>About</title>
 </head>
 <body>
