--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
-    <link href="homeStyle.css" rel="stylesheet" type="text/css">
-    <link href="navbarStyle.css" rel="stylesheet" type="text/css">
-    <link href="footerStyle.css" rel="stylesheet" type="text/css">
-    <link href="globalStyle.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/homeStyle.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/global/navbarStyle.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/global/footerStyle.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
     <title>Team 7052</title>
   </head>
   <body>
