Finalized template for each page of the website and major refactoring changes

--- a/about/theTeam.html
+++ b/about/theTeam.html
@@ -3,23 +3,23 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
-  <link href="stylesheets/aboutStyle.css" rel="stylesheet" type="text/css">
-  <link href="stylesheets/global/navbarStyle.css" rel="stylesheet" type="text/css">
-  <link href="stylesheets/global/footerStyle.css" rel="stylesheet" type="text/css">
-  <link href="stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
-  <link href="stylesheets/global/subNavbarStyle.css" rel="stylesheet" type="text/css">
+  <link href="../stylesheets/aboutStyle.css" rel="stylesheet" type="text/css">
+  <link href="../stylesheets/global/navbarStyle.css" rel="stylesheet" type="text/css">
+  <link href="../stylesheets/global/footerStyle.css" rel="stylesheet" type="text/css">
+  <link href="../stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
+  <link href="../stylesheets/global/subNavbarStyle.css" rel="stylesheet" type="text/css">
   <title>Team 7052 | About</title>
 </head>
 <body>
-  <div class="about-page">
-    <div class="about-main-container">
+  <div class="page">
+    <div class="page-main-container">
       <!-- Create background blurred image -->
-      <div class="about-background-image"></div>
+      <div class="page-background-image"></div>
       <div class="navbar">
-        <img class="navbar-logo-image "src="public/images/logo.png">
-        <div class="navbar-element"><a href="index.html">Home</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="about.html">About</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="#">Outreach</a></div>
+        <img class="navbar-logo-image "src="../public/images/logo.png">
+        <div class="navbar-element"><a href="../index.html">Home</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="theTeam.html">About</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="../outreach/events.html">Outreach</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="#">Media</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="#">Sponsors</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="#">Resources</a></div>
@@ -32,13 +32,13 @@
       </div>
       <!-- Renamed to sub-navbar since this will be a global element (used in every page) -->
       <div class="sub-navbar" id="aboutbar">
-        <div class="sub-navbar-element"><a href="about.html">The Team</a></div>
-        <div class="sub-navbar-element"><a href="#">Members</a></div>
-        <div class="sub-navbar-element"><a href="#">Mentors</a></div>
+        <div class="sub-navbar-element sub-navbar-element-selected"><a href="theTeam.html">The Team</a></div>
+        <div class="sub-navbar-element"><a href="members.html">Members</a></div>
+        <div class="sub-navbar-element"><a href="mentors.html">Mentors</a></div>
       </div>
     </div>
-    <div class="about-subsection">
-      <div id="about-paragraph-section">
+    <div class="page-subsection">
+      <div id="about-team-paragraph-section">
       <p>quisquam est, qui dolorem ipsum quia
   dolor sit amet, consectetur, adipisci
   velit, sed quia non numquam eius modi
