--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="navbar">
           <img class="navbar-logo-image "src="public/images/logo.png">
           <div class="navbar-element"><a href="index.html">Home</a></div>
-          <div class="navbar-element navbar-dropdown-section"><a href="about.html">About</a></div>
+          <div class="navbar-element navbar-dropdown-section"><a href="about/theTeam.html">About</a></div>
           <div class="navbar-element navbar-dropdown-section"><a href="#">Outreach</a></div>
           <div class="navbar-element navbar-dropdown-section"><a href="#">Media</a></div>
           <div class="navbar-element navbar-dropdown-section"><a href="#">Sponsors</a></div>
@@ -35,7 +35,7 @@
       <div class="home-subsection" id="home-about-section">
         <h1>About Us</h1>
         <p>Falcotronix is a high school robotics team from St. Ignatius. We are part of FIRST Robotics, a world-wide high school robotics competition. Our mission is to promote STEM (Science, Technology, Engineering and Math) education in a team environment across Northwestern Ontario.</p>
-        <a class="underlined-link" href="about.html">Read More</a>
+        <a class="underlined-link" href="about/theTeam.html">Read More</a>
         <div id="home-about-image"></div>
       </div>
 
