Added all pages and all pages now working

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <img class="navbar-logo-image "src="public/images/logo.png">
           <div class="navbar-element"><a href="index.html">Home</a></div>
           <div class="navbar-element navbar-dropdown-section"><a href="about/theTeam.html">About</a></div>
-          <div class="navbar-element navbar-dropdown-section"><a href="#">Outreach</a></div>
-          <div class="navbar-element navbar-dropdown-section"><a href="#">Media</a></div>
-          <div class="navbar-element navbar-dropdown-section"><a href="#">Sponsors</a></div>
-          <div class="navbar-element navbar-dropdown-section"><a href="#">Resources</a></div>
+          <div class="navbar-element navbar-dropdown-section"><a href="outreach/events.html">Outreach</a></div>
+          <div class="navbar-element navbar-dropdown-section"><a href="media/gallery.html">Media</a></div>
+          <div class="navbar-element navbar-dropdown-section"><a href="sponsors/all.html">Sponsors</a></div>
+          <div class="navbar-element navbar-dropdown-section"><a href="resources/blog.html">Resources</a></div>
         </div>
 
         <!-- Content that is in the home page, when user first loads screen -->
