--- a/media/news.html
+++ b/media/news.html
@@ -8,49 +8,38 @@
   <link href="../stylesheets/global/footerStyle.css" rel="stylesheet" type="text/css">
   <link href="../stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
   <link href="../stylesheets/global/subNavbarStyle.css" rel="stylesheet" type="text/css">
-  <title>Team 7052 | About</title>
+  <title>Team 7052 | Media</title>
 </head>
 <body>
   <div class="page">
     <div class="page-main-container">
       <!-- Create background blurred image -->
-      <div class="page-background-image"></div>
+      <div class="page-background-image" id="outreach-background-image"></div>
       <div class="navbar">
         <img class="navbar-logo-image "src="../public/images/logo.png">
         <div class="navbar-element"><a href="../index.html">Home</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="theTeam.html">About</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="../about/theTeam.html">About</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="../outreach/events.html">Outreach</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="../media/gallery.html">Media</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="gallery.html">Media</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="../sponsors/all.html">Sponsors</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="../resources/blog.html">Resources</a></div>
       </div>
       <!-- Content that is in the about page, when user first loads screen -->
       <!-- Next two are global elements since they are used on every page -->
       <div class="page-title-section">
-        <div class="page-main-title">About</div>
-        <p class="page-main-subtitle">the team</p>
+        <div class="page-main-title">Media</div>
+        <p class="page-main-subtitle">news</p>
       </div>
       <!-- Renamed to sub-navbar since this will be a global element (used in every page) -->
       <div class="sub-navbar">
-        <div class="sub-navbar-element sub-navbar-element-selected"><a href="theTeam.html">The Team</a></div>
-        <div class="sub-navbar-element"><a href="members.html">Members</a></div>
-        <div class="sub-navbar-element"><a href="mentors.html">Mentors</a></div>
+        <div class="sub-navbar-element"><a href="gallery.html">Gallery</a></div>
+        <div class="sub-navbar-element sub-navbar-element-selected"><a href="news.html">News</a></div>
+        <div class="sub-navbar-element"><a href="social.html">Social</a></div>
       </div>
     </div>
     <div class="page-subsection">
-      <div id="about-team-paragraph-section">
-      <p>quisquam est, qui dolorem ipsum quia
-  dolor sit amet, consectetur, adipisci
-  velit, sed quia non numquam eius modi
-  tempora incidunt ut labore et dolore
-  magnam aliquam quaerat voluptatem.
-  Ut enim ad minima veniam, quis
-  nostrum exercitationem ullam corporis
-  suscipit laboriosam, nisi ut aliquid ex ea
-  commodi consequatur? Quis autem vel
-  eum iure reprehenderit qui in ea
-  voluptate velit esse quam nihil</p>
-    </div>
-  </div>
 
-</body>
+    </div>
+
+  </body>
+</html>
