--- a/outreach/events.html
+++ b/outreach/events.html
@@ -20,9 +20,9 @@
         <div class="navbar-element"><a href="../index.html">Home</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="../about/theTeam.html">About</a></div>
         <div class="navbar-element navbar-dropdown-section"><a href="events.html">Outreach</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="#">Media</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="#">Sponsors</a></div>
-        <div class="navbar-element navbar-dropdown-section"><a href="#">Resources</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="../media/gallery.html">Media</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="../sponsors/all.html">Sponsors</a></div>
+        <div class="navbar-element navbar-dropdown-section"><a href="../resources/blog.html">Resources</a></div>
       </div>
       <!-- Content that is in the about page, when user first loads screen -->
       <!-- Next two are global elements since they are used on every page -->
@@ -31,7 +31,7 @@
         <p class="page-main-subtitle">events</p>
       </div>
       <!-- Renamed to sub-navbar since this will be a global element (used in every page) -->
-      <div class="sub-navbar" id="aboutbar">
+      <div class="sub-navbar">
         <div class="sub-navbar-element sub-navbar-element-selected"><a href="events.html">Events</a></div>
         <div class="sub-navbar-element"><a href="camps.html">Camps</a></div>
       </div>
