--- a/outreach/camps.html
+++ b/outreach/camps.html
@@ -8,7 +8,7 @@
   <link href="../stylesheets/global/footerStyle.css" rel="stylesheet" type="text/css">
   <link href="../stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
   <link href="../stylesheets/global/subNavbarStyle.css" rel="stylesheet" type="text/css">
-  <title>Team 7052 | About</title>
+  <title>Team 7052 | Outreach</title>
 </head>
 <body>
   <div class="page">
