Changed default gray footer to default white footer

--- a/templateFiles/footer.html
+++ b/templateFiles/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer gray-footer">
+<footer class="footer">
   <div class="footer-trademark">Falcotronix 2018 ®</div>
   <div class="footer-contact">team7052@falcotronix.com</div>
 </footer>
