Fixed the team page, and it is mobile-responsive

--- a/resources/blog.html
+++ b/resources/blog.html
@@ -1,3 +1,4 @@
-<div>
+<link href="../stylesheets/resources/blogStyle.css" rel="stylesheet" type="text/css">
+<div id="blog-section">
   Blog
 </div>
