Started blog page

--- a/resources/blog.html
+++ b/resources/blog.html
@@ -1,4 +1,6 @@
 <link href="../stylesheets/resources/blogStyle.css" rel="stylesheet" type="text/css">
 <div id="blog-section">
-  Blog
+  <div id="blog-categories-container"></div>
 </div>
+
+<script type="text/javascript" src="blog/blogJS.js"></script>
