Small changes and modifications\

--- a/about/The Team.html
+++ b/about/The Team.html
@@ -8,14 +8,14 @@
   consisting of many enthusiastic students led by several dedicated
   teachers at our school. The goal of Falcotronix is to promote
   STEM education and FIRST Robotics not only in our school community, but in
-  the city of Thunder Bay. 
+  the city of Thunder Bay.
   </p>
   <p>
     Our team helps students develop
     essential skills for the future in leadership and many academic fields.
     Our devoted and experienced mentors teach students new skills
     in leadership, marketing, engineering, communication, and critical
-    thinking. 
+    thinking.
   </p>
   <p>
     As a newly formed team, we strive to continue to succeed
@@ -35,11 +35,11 @@
       our school, but Thunder Bay as a whole.
       Despite experiencing various technical difficulties over the duration
       of the tournament, we are proud to have placed 16th out of a total 38
-      teams from all Ontario. 
+      teams from all Ontario.
   </p>
   <p>
       Inspired  by our success at the large event,
-      our team looked ambitiously looked towards our next FRC event in North Bay
+      our team looked ambitiously towards our next FRC event in North Bay
       later that same month and attempted to rework the shortcomings of the
       robot. Unfortunately, with limited experience and time, we were unable
       to find a definite fix for the robot and placed 29th out of the 32 teams at
