Fixing bug error on blog (switchSubsection)

--- a/resources/blog.html
+++ b/resources/blog.html
@@ -4,3 +4,7 @@
 </div>
 
 <script type="text/javascript" src="blog/blogJS.js"></script>
+<script type="text/javascript">
+  let blogManager = new BlogManager();
+  parseBlogs();
+</script>
