still bad blog page

--- a/resources/blog.html
+++ b/resources/blog.html
@@ -5,6 +5,5 @@
 
 <script type="text/javascript" src="blog/blogJS.js"></script>
 <script type="text/javascript">
-  let blogManager = new BlogManager();
-  parseBlogs();
+  initBlog();
 </script>
