Removed all php sessions and replaced them with sessionStorage

--- a/about/members.html
+++ b/about/members.html
@@ -4,4 +4,4 @@
     
 </div>
 
-<script type="text/javascript">loadMembers("../about/jsonFiles/members.json", "about-members-section");</script>
+<script type="text/javascript">loadMembers("../jsonFiles/members.json", "about-members-section");</script>
