--- a/about/mentors.html
+++ b/about/mentors.html
@@ -3,4 +3,4 @@
 <div id="about-members-section">
 </div>
 
-<script type="text/javascript">loadMembers("../about/jsonFiles/mentors.json", "about-members-section");</script>
+<script type="text/javascript">loadMembers("../jsonFiles/mentors.json", "about-members-section");</script>
