--- a/media/social.html
+++ b/media/social.html
@@ -1,32 +1,28 @@
 <link type="text/css" rel="stylesheet" href="../stylesheets/media/socialStyle.css">
 
 <div id="media-section">
-  <img id="facebookLogo" src="../public/images/socialMediaLogos/facebook.png">
-  <img id="instagramLogo" src="../public/images/socialMediaLogos/instagram.png">
-  <img id="youtubeLogo" src="../public/images/socialMediaLogos/youtube.png">
+  <img class="social-image-logo" id="facebookLogo" src="../public/images/socialMediaLogos/facebook.png">
+  <a href="https://instagram.com/falcotronix">
+    <img class="social-image-logo" id="instagramLogo" src="../public/images/socialMediaLogos/instagram.png">
+  </a>
+  <img class="social-image-logo" id="youtubeLogo" src="../public/images/socialMediaLogos/youtube.png">
 
-  <div id="facebookLogo">
+  <div class="social-description" id="facebookDescription">
     <h2> Facebook <h2>
-  </div>
-
-  <div id="facebookLogo">
     <h3> Find all events <h3>
   </div>
 
-  <div id="instagramLogo">
-    <h2> Instagram <h2>
+  <div class="social-description" id="instagramDescription">
+    <a href="https://instagram.com/falcotronix">
+      <h2> Instagram <h2>
+      <h3> Follow us <h3>
+    </a>
   </div>
 
-  <div id="instagramLogo">
-    <h3> Follow us <h3>
-  </div>
-
-  <div id="youtubeLogo">
+  <div class="social-description" id="youtubeDescription">
     <h2> Youtube <h2>
-  </div>
-
-  <div id="youtubeLogo">
     <h3> All our videos <h3>
   </div>
+
   <div id="social-image"></div>
 </div>
