--- a/resources/blog.html
+++ b/resources/blog.html
@@ -1,15 +1,4 @@
 <link href="../stylesheets/resources/blogStyle.css" rel="stylesheet" type="text/css">
 <div id="blog-section">
-  <div id="blog-categories-container"></div>
+  View our blog on <a href="https://www.medium.com/@falcotronix">Medium</a>
 </div>
-
-<script type="text/javascript" src="blog/blogJS.js"></script>
-<script type="text/javascript">
-  window.addEventListener('load', function() {
-    parseBlogs();
-  });
-  window.addEventListener('subsectionSwitchLoaded', function() {
-    parseBlogs();
-    console.log(blogs);
-  });
-</script>
