--- a/templateFiles/header.html
+++ b/templateFiles/header.html
@@ -7,7 +7,8 @@
   <link href="../stylesheets/global/globalStyle.css" rel="stylesheet" type="text/css">
   <title>
   </title>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.2/velocity.min.js"></script>
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/velocity/2.0.2/velocity.min.js"></script>-->
+  <script src="../lib/velocity.min.js" type="text/javascript"></script>
   <script type='text/javascript' src="../scripts/main.js">
     // set head title
   </script>
